chore: update readme

--- a/back-end/views/home.handlebars
+++ b/back-end/views/home.handlebars
@@ -36,7 +36,8 @@
       - better ui
       - e2e testings
       - persistent db using postgresql (instead of localindexeddb)
-      - other front-ends projects (react, selvet ...)
+      - other front-ends projects (react, svelte ...)
+      - add comments
     </code>
   </pre>
 </div>
