feat: add reactjs realization in backend

--- a/back-end/public/style.css
+++ b/back-end/public/style.css
@@ -48,6 +48,12 @@ pre .question {
     
 }
 
+.realizations {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
 .realizations .realization {
   cursor: pointer;
   border: 1px solid #ececec;
