feat: update backend challenge 3 and readme

--- a/back-end/views/challenge3.handlebars
+++ b/back-end/views/challenge3.handlebars
@@ -52,7 +52,7 @@
       src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/270px-React-icon.svg.png"
     >
     
-    <h5>Realization with Reactjs (in progress)</h5>
+    <h5>Realization with Reactjs</h5>
   </div>
 </div>
 
