--- a/back-end/views/home.handlebars
+++ b/back-end/views/home.handlebars
@@ -16,8 +16,12 @@
       // node server available at localhost:3000
 
       cd ./front-ends/vuejs
-      npm run dev
+      npm install && npm run dev
       // vuejs available at localhost:8080
+
+      cd ./front-ends/reactjs
+      npm install && npm run dev
+      // reactjs available at localhost:8081
     </code>
   </pre>
 
